--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul><li>Sekarang menjadi salah satu bahasa pemrograman paling populer di dunia</li></ul>
           </div>
           <div class="img">
-            <img src="/image/3dcartooncoding.png" alt="" />
+            <img src="image/3dcartooncoding.png" alt="" />
           </div>
           
              <div class="text-content">
