--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Java Script full course</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/asets/css/navbar.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/asets/css/font.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/asets/css/responsive-mobile.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/asets/css/responsive-mobile-landscape.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="asets/css/navbar.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="asets/css/font.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="asets/css/responsive-mobile.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="asets/css/responsive-mobile-landscape.css" type="text/css" media="all" />
   </head>
   <body>
     <div id="navbar-container"></div>
@@ -47,7 +47,7 @@
         </div>
         
         <div class="example">
-          <img class="img-robot" src="/image/InShot-20250910-191733740-unscreen.gif" alt="" />
+          <img class="img-robot" src="image/InShot-20250910-191733740-unscreen.gif" alt="" />
           <h2>Fungsi dan Kegunaan JavaScript</h2>
           <ol>
           <div class="text-c">
@@ -156,7 +156,7 @@
       <!-- container 2 ___-->
     </main>
     <script src="main.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/asets/js/navbar.js"></script>
+    <script src="asets/js/navbar.js"></script>
     <script>
               // Memuat navbar
         loadNavbar();
