--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         
         <div class="example">
-          <img class="img-robot" src="image/InShot-20250910-191733740-unscreen.gif" alt="" />
+          <img class="img-robot" src="image/InShot-20250910-191733740-unscreen.gif alt="" />
           <h2>Fungsi dan Kegunaan JavaScript</h2>
           <ol>
           <div class="text-c">
